--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -334,7 +334,7 @@ footer{ padding: 30px 0; }
 .image-bg .container, .image-bg div[class*='col-']{ position: relative; z-index: 3; }
 .container.image-bg .row{ position: relative; z-index: 3; }
 
-.background-image-holder{ position: fixed; width: 100%; height: 100%; top: 0; left: 0; z-index: 1; background: @bg-dark; background-size: cover !important; background-position: 50% 50% !important; .transition(0.3s); opacity: 0; }
+.background-image-holder{ position: fixed; width: 100%; height: 100%; top: 0; left: 0; z-index: 1; background: @bg-dark; background-size: cover; background-position: 50% 50%; .transition(0.3s); opacity: 0; }
 .background-image-holder img{ display: none; }
 .background-multiply .background-image-holder{ background-color: @color-primary !important; background-blend-mode: multiply; }
 .background-image-holder.fadeIn{ opacity: 1; }
@@ -1936,15 +1936,15 @@ WHERE MAGIC HAPPENS
 **********************/
 
 .background-image-holder{
-	background-size: cover;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	height: 100%;
-	width: 100%;
-	position: fixed;
-	background-position: center center;
-	background-repeat: no-repeat;
+	background-size: cover !important;
+	-webkit-background-size: cover !important;
+	-moz-background-size: cover !important;
+	-o-background-size: cover !important;
+	height: 100% !important;
+	width: 100% !important;
+	position: fixed !important;
+	background-position: center center !important;
+	background-repeat: no-repeat !important;
 }
 
 #feedback-icon{
